2022-10-14T02:29:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3247034102 # 133
* notice: last 14d: unq all: 2 17
* notice: prev accum: outdated-unq outdated-all / unq all: 52 178 / 63 195
* notice: next accum: outdated-unq outdated-all / unq all: 53 180 / 63 197
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-09-29] / [2022-10-13]

2022-10-13T08:30:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3240837730 # 131
* notice: last 14d: unq all: 2 17
* notice: prev accum: outdated-unq outdated-all / unq all: 52 178 / 62 195
* notice: next accum: outdated-unq outdated-all / unq all: 52 178 / 63 195
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-29 2022-10-13]

2022-10-13T02:14:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3239207504 # 130
* notice: last 14d: unq all: 2 17
* notice: prev accum: outdated-unq outdated-all / unq all: 52 178 / 62 194
* notice: next accum: outdated-unq outdated-all / unq all: 52 178 / 62 195
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-10-12]

2022-10-12T16:42:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3236396808 # 129
* notice: last 14d: unq all: 2 16
* notice: prev accum: outdated-unq outdated-all / unq all: 51 176 / 61 192
* notice: next accum: outdated-unq outdated-all / unq all: 52 178 / 62 194
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-09-28] / [2022-10-12]

2022-10-12T08:29:37Z: