@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-14T02:29:00Z",
+  "timestamp" : "2022-10-14T08:31:12Z",
   "count_outdated" : 180,
   "uniques_outdated" : 53,
-  "count" : 197,
+  "count" : 196,
   "uniques" : 63,
   "clones" : [
     {
       "timestamp": "2022-09-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
