@@ -1,3 +1,11 @@
+2022-10-14T08:31:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3248530083 # 134
+* notice: last 14d: unq all: 2 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 53 180 / 63 197
+* notice: next accum: outdated-unq outdated-all / unq all: 53 180 / 63 196
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-09-30]
+
 2022-10-14T02:29:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3247034102 # 133
 * notice: last 14d: unq all: 2 17
